--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">· 07541936960 ·
             <a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a>
           </div>
-          <p class="lead mb-5">I am an emerging museum proffessional with a background in the Library and Education sectors. I particularly specialise in devloping and delivering education sessions and resources, with an interest in the role and usage of digital in the museum.</p>
+          <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of digital in the museum.</p>
           <div class="social-icons text-md-right">
             <h3>Current Projects:</h3>
             <a href="scary.html">
