--- a/index.html
+++ b/index.html
@@ -416,6 +416,27 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <h2 class="mb-5">Blog</h2>
       </section>
+      <h3> Resource Review - Occupy White Walls</h3>
+      <p>Occupy White Walls is a Museum MMO, or as it describes itself on its Steam page 
+
+ " a PC sandbox-building, AI-driven MMO where people play with Art, developed by folks who really love architecture and abstract characters."
+
+OWW invites you to design and curate your own gallery from the ground up, unlocking architectural elements and buying paintings - suggested by their AI Daisy, who'll be taking note of the art that catches your interest - before opening your gallery to the public. You earn money from visitors and unlocks to keep developing your collection, and can take time to visit galleries created by others.
+
+So far I have really enjoyed my time in OWW. I wouldn't normally say art is my thing; I work in a gallery on and off now, and I have done a couple of stints in Tate Exchange, but it actually took a long time and a lot of time having my lectures at Tate Britain in uni to get me comfortable in the space, and its still a world I can feel quite out of my depth in. But Occupy White Walls is really good at doing what its title suggests, my gallery feels like my space to occupy and has that same sense of radical democratisation as the Occupy movement engendered, it makes it really feel like you have a right to be in the space. Don't get me wrong I am still terrible at designing my own gallery and have fallen off an inordinate amount of stairs, but with Daisy's help, I've been exploring art in a way I haven't usually been able to without the kind of vector of working or volunteering in a gallery. 
+
+It has also been really interesting to visit other people galleries and see the amazing things people have been able to do with the architectural tileset and lighting system. Galleries themselves are often intricate and atmospheric, and the game democratises the curation process in a way that allows for pointed and creative interpretations of the art. I've seen incredibly effective galleries themed simply around the colours of the works and architecture, while others take in-depth looks at themes like mythology and mysticism, or deliver acerbic commentaries on themes such as nudity in art. 
+
+OWW is one of those resources that I feel could be really interesting and hugely beneficial to use in an education setting, I just can't quite place where or how a programme using it would work. It is certainly a brilliant tool for both nascent curators and those who are experiencing blocks to art participation, the "gamey" nature of the project and the spot-on ability of the AI to suggest artworks based on your interests using everything from 17th century Masters to 2019 digital works makes it hugely accessible. 
+
+My instant thought is that it would make a perfect class project, inviting a group of students to work on their own galleries, visit each other's spaces and refine their own choices and themes. Or to use it to create a community curation project which allowed a group to work together to develop their own gallery. You could even use it as part of a programme for existing art museum or gallery, re-creating your own space and collection to allow people to re-curate and re-display - a digital guest curator programme maybes? But most ideas come up against a significant block for educational use: users can comment universally on any of the artworks, or spaces in the game - a brilliant addition from the perspective of an adult participating in their own right, but a challenge to risk asses for younger users or for use on gallery. It suffers a little from the same issue as Second Life (sorry for the comparison OWW!), both its benefits and its potential downfall will be the choices and interactions of its players. 
+
+All in all, OWW is a really valuable project, that I could see being used in really innovative ways to make real headway in making art and the idea of careers like art curation accessible. I'm just not sure how I'd use it. 
+
+You can get Occupy White Walls on Steam here: 
+<https://store.steampowered.com/app/876160/Occupy_White_Walls/>
+
+This review is for the Early Access version of the game. <p>
 
     </div>
 
