--- a/index.html
+++ b/index.html
@@ -71,7 +71,12 @@
     </nav>
 
     <div class="container-fluid p-0">
-
+<div class="alert alert-secondary alert-dismissible fade show" role="alert">
+  <strong>This site uses cookies.</strong> We only use cookies to analyse traffic to the site, by click x or continuing to use this site you consent to the use of cookies unless you have disabled them in your browser.  
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Jennifer Clare
