--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
           <li class="nav-item">
             <a class="nav-link  " href="#about">About</a>
           </li>
-          <li class="nav-item">
+         <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Portfolio</a>
           </li>
@@ -79,21 +79,20 @@
 </div>
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Jennifer Clare
-            <span class="text-primary">Paton</span>
-          </h1>
-          <div class="subheading mb-5">· 07541936960 ·
-            <a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a>
+          <h1 class="mb-0">JCPaton
+          	<span class="text-primary">Learning</span></h1>
+          <div class="subheading mb-5">· 07541 936960 ·
+            <a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
           </div>
-          <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of digital in the museum.</p>
+          <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p>
           <div class="social-icons text-md-right">
             <h3>Current Projects:</h3>
             <a href="scary.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/scary.png" alt="">
             </a>
-            <a href="#bfh.html">
+            <!--<a href="#bfh.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/bfh.png" alt="">
-            </a>
+            </a> -->
             <a href="#signage.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/articles.png" alt="">
             </a>
@@ -103,7 +102,7 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+     <!--<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
@@ -245,7 +244,7 @@
           </div>
 
         </div>
-      </section>
+      </section> -->
 
       <hr class="m-0">
 
@@ -259,8 +258,8 @@
           <div class="card" style="width: 18rem;">
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Project</h6>
-            <h5 class="card-title">Mystery Box w/ ScaryMushroom</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Middlesbrough Mystery Box</h5>
+             <p class="card-text">An experiment with artist <a href="https://scarymushroom.wordpress.com/">Scary Mushroom </a> investigating using haptics and exploration to engage adult learners.</p>
              <a href="scary.html" class="card-link">Project Details</a>
            </div>
           </div>
@@ -269,9 +268,33 @@
         <div class="col-sm-4">
           <div class="card" style="width: 18rem;">
            <div class="card-body">
+            <h6 class="card-subtitle mb-2">Publication</h6>
+            <h5 class="card-title">Museological Review, Defining the Museum</h5>
+             <p class="card-text">Awaiting publication. A response to ICOM's redefinition of the museum.</p>
+             <a href="" class="card-link">Coming Soon</a>
+           </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="card" style="width: 18rem;">
+           <div class="card-body">
+            <h6 class="card-subtitle mb-2">Client Work</h6>
+            <h5 class="card-title">Discovery Room Digital Re-vamp, Benjamin Franklin House</h5>
+             <p class="card-text">Reedsigning and future-proofing the digital offer used in BFH's formal learning programme</p>
+             <a href="bfh.html" class="card-link">Project Details</a>
+           </div>
+          </div>
+        </div>
+       </div>
+    
+       <div class="row mb-5">
+        <div class="col-sm-4">
+          <div class="card" style="width: 18rem;">
+           <div class="card-body">
             <h6 class="card-subtitle mb-2">Essay</h6>
             <h5 class="card-title">In museums today, can digital collections be treated the same as material collections?</h5>
-             <p class="card-text">Some quick example text to build</p>
+             <p class="card-text">An exploration of digital collection.</p>
              <a href="img/Collecting_Today_Digital_Collections_JPaton.pdf" class="card-link">Read the Essay</a>
            </div>
           </div>
@@ -282,32 +305,32 @@
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Thesis Project</h6>
             <h5 class="card-title">Roundheads at the Tower</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <p class="card-text">Little is popularly known about the role of the Tower of London in the English Civil Wars, this series of audioguides will take you on a walk through the Tower's Roundhead past.</p>
              <a href="http://roundheadsatthetower.co.uk" class="card-link">Website</a>
              <a href="roundheads.html" class="card-link">Project Details</a>
            </div>
           </div>
         </div>
-      </div>
 
-      <div class="row">
         <div class="col-sm-4">
           <div class="card" style="width: 18rem;">
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Group Project</h6>
             <h5 class="card-title">Expanding City Interpretation Plan</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <p class="card-text">A group project from my degree re-interpreting the Museum of London's Expanding City Gallery, to increase accessibility.</p>
              <a href="expandingcity.html" class="card-link">Project Details</a>
            </div>
           </div>
         </div>
+       </div>
 
+       <div class="row mb-5">
         <div class="col-sm-4">
           <div class="card" style="width: 18rem;">
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Event</h6>
             <h5 class="card-title">Libraries Week - Mystery</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <p class="card-text">A week long event programme, collaberating with teaching departments to create curriculum-linked activities and promote literacy and develop info lit skills.</p>
              <a href="librariesweek.html" class="card-link">Project Details</a>
            </div>
           </div>
@@ -318,7 +341,7 @@
            <div class="card-body">
             <h6 class="card-subtitle mb-2">Scheme</h6>
             <h5 class="card-title">LOVE BoOKS</h5>
-             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+             <p class="card-text">A long running scheme designed to promote adult literacy and generate a love of reading.</p>
              <a href="lovebooks.html" class="card-link">Project Details</a>
            </div>
           </div>
@@ -340,14 +363,14 @@
     <div class="card-header" id="headingOne">
       <h3 class="mb-0">
         <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Scary Mushroom, Mystery Box Project #in progress
+          Scary Mushroom, Middlesbrough Mystery Box Project #in progress
         </button>
       </h3>
     </div>
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
         <div class="media">
-          <div class="media-body">Working with my friend the artist and travel blogger <a href="https://scarymushroom.wordpress.com/">ScaryMushroom</a>, the Mystery Box is a project to curate a journey around Middlesborough's (and a few of London's) cultural and historic sites. But, its never that easy. The "Mystery Box" will take some exploring and a little de-coding before ScaryMushroom will know where to go, or be able to start picking apart the story behind her trips. 
+          <div class="media-body">Working with my friend the artist and travel blogger <a href="https://scarymushroom.wordpress.com/">ScaryMushroom</a>, the Mystery Box is a project to curate a journey around Middlesbrough's (and a few of London's) cultural and historic sites. But, its never that easy. The "Mystery Box" will take some exploring and a little de-coding before ScaryMushroom will know where to go, or be able to start picking apart the story behind her trips. 
             <a href="scary.html">For more on the project click here</a>
             <br><br>
           #CPD #Puzzle #FictionalisedHistory #Box #Collaboration
@@ -361,14 +384,21 @@
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Benjamin Franklin House - Discovery Room Games #in progress
+           Discovery Room Games - Benjamin Franklin House #complete
         </button>
       </h5>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
-        <div class="container float-left">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.</div>
+ 		<div class="media">
+          <div class="media-body">Working with the Education Department and volunteers at Benjamin Franklin House, I undertook a project to re-develop and re-vamp the video games used in the team's learning offer. Following a successful funding bid the team had updated their learning offer to include a number of colourful collages by illustrator Kremena Dimitrova which afforded an excellent opportunity to re-examine the games used as part of their Discovery Room education session and bring them into line with the new design scheme as well as fixing some old problems and enhancing their accessibility. 
+        	<a href="bfh.html">For more on the project click here</a>
+        	<br><br>
+         #Digital #Learning #BenjaminFranklinHouse #Accessibility #Games
+     	</div>
+        <a href="bfh.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt=""></a>
       </div>
+ 	 </div>
     </div>
   </div>
   <div class="card">
@@ -381,7 +411,11 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
       <div class="card-body">
-        <a href="https://www.researchgate.net/project/Museum-Signage-Visitor-Navigtion-Fairness">***LINK TO PROJECT***</a>Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Museum signage is a function of fairness and accessibility, as necessary in combating threshold fear and engaging new audiences as is programming, community engagement, or any other function of the museum.
+
+        You can see my progress in researching and developing this article <a href="https://www.researchgate.net/project/Museum-Signage-Visitor-Navigtion-Fairness">here.</a>
+        <br><br>
+        #Accessiblity #ThresholdFear #Article #Museums4All
       </div>
     </div>
   </div>
@@ -395,10 +429,17 @@
     </div>
     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+      	 <div class="media">
+          <div class="media-body">
+        A project recap website for the University of Westminster MA Museum & Galleries in Contemporary Cultures' Tate Exchange 2018 offer. 
+        <a href="makeorbreaktate.site">Visit the site.</a>
+        <br><br>
+        #Digital #TateExchange #Learning #Programming #Events
       </div>
+     <a href="http://makeorbreaktate.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/makeorbreak.png" alt=""></a>
     </div>
   </div>
+</div>
   <div class="card">
     <div class="card-header" id="headingFive">
       <h3 class="mb-0">
@@ -410,12 +451,12 @@
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
       <div class="card-body">
         <div class="media">
-          <div class="media-body">Working with my friend the artist and travel blogger <a href="https://scarymushroom.wordpress.com/">ScaryMushroom</a>, the Middlesborough Mystery Box is a project to curate a journey around Middlesborough's (and a few of London's) cultural and historic sites. But, its never that easy. The "Mystery Box" will take some exploring and a little de-coding before ScaryMushroom will know where to go, or be able to start picking apart the story behind her trips. 
-            <a href="scary.html">For more on the project click here</a>
+          <div class="media-body">
+            Little is popularly known about the role of the Tower of London in the English Civil Wars, this series of audioguides will take you on a walk through the Tower's Roundhead past. You can visit the project <a href="http://roundheadsatthetower.co.uk">here</a><br>For more on the project click<a href="roundheads.html">here</a>
             <br><br>
-          #CPD #Puzzle #FictionalisedHistory #Box #Collaberation
+          #EarlyModern #Budget #Digital #Audioguide #EnglishCivilWar
           </div>
-          <a href="scary.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/scary.png" alt=""></a>
+          <a href="roundheads.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/roundheads.png" alt=""></a>
         </div>  
       </div>
     </div>
