wider site update 14/4/2020

--- a/tate.html
+++ b/tate.html
@@ -40,13 +40,13 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#about">About</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="index.html#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html#education">Education</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item">-->
             <a class="nav-link" href="index.html#skills">Portfolio</a>
           </li>
           <li class="nav-item">
@@ -73,7 +73,7 @@
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>
         <h2>Project Brief</h2>
           </div>
-            <div class="col-sm-3"><img class="img-fluid rounded-circle mx-auto  float-right" src="img/Picture 1.jpg" alt=""></div>
+            <div class="col-sm-3"><img class="img-fluid rounded-circle mx-auto  float-right" src="img/makeorbreak.png" alt=""></div>
           </div>
           <p>Project project project</p>
         </div>
