--- a/scary.html
+++ b/scary.html
@@ -40,12 +40,12 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html#about">About</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="index.html#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="index.html#education">Education</a>
-          </li>
+          </li>-->
           <li class="nav-item">
             <a class="nav-link" href="index.html#skills">Portfolio</a>
           </li>
@@ -73,7 +73,7 @@
           <a class="btn btn-light js-scroll-trigger" href="#Outcomes" role="button">Outcomes</a>
         <h2>Project Brief</h2>
           </div>
-            <div class="col-sm-3"><img class="img-fluid rounded-circle mx-auto  float-right" src="img/Picture 1.jpg" alt=""></div>
+            <div class="col-sm-3"><img class="img-fluid rounded-circle mx-auto  float-right" src="img/scary.png" alt=""></div>
           </div>
           <p>As escape room obssessed, mystery loving, puzzle fans ScaryMushroom and myself have much in common, and so when she returned from a jaunt around the world to her base in middlesborough just as I was toying with concept of using a puzzle box as an interactive exhibition space it seemed like an ideal partnership. As such this project has started with a somewhat diffferent brief: 
           	<ul>
