--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <div class="my-auto">
           <h1 class="mb-0">JCPaton
           	<span class="text-primary">Learning</span></h1>
-          <div class="subheading mb-5">· 07541 936960 ·
-            <a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
+          	<div class="h3"><span style="color:#6BD4D0">MUSEUMS</span> · <span style="color:#628fA1">HERITAGE</span> · <span style="color:#58456E">LIBRARIES</span> </div>
+            <div class="subheading mb-5"><a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
           </div>
           <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p>
-          <div class="social-icons text-md-right">
+          <div class="social-icons text-md-left">
             <h3>Current Projects:</h3>
             <a href="scary.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/scary.png" alt="">
