--- a/IMAGE HEADER EXP.html
+++ b/IMAGE HEADER EXP.html
@@ -21,8 +21,13 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
-  </head>
+    <!-- CSS for accordion-->
+    <link href="css/accordion.css" rel="stylesheet">    
 
+
+
+
+  </head>
   <body id="page-top">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
@@ -59,6 +64,8 @@
       </div>
     </nav>
 
+
+
  <div class="container md-left">
     <div class="row ">
       <br> <br>
@@ -76,19 +83,94 @@
           Stuff and things and stuff <a href="scary.html">LINK HERE</a>
         </p>
             </div>
-   </div>
+      </div>
  </div>
     <div class="col-2 overflow-hidden">
-      <img class="img-responsive float-right" src="img/scary_proj.png" alt="">
+      <div class="hovereffect">
+        <img class="img-responsive" src="img/scary_proj.png" alt="">
+            <div class="overlay">
+                <h2>Middlesbrough Mystery Box</h2>
+        <p>
+          Stuff and things and stuff <a href="scary.html">LINK HERE</a>
+        </p>
+            </div>
+      </div>
     </div>
     <div class="col-2 overflow-hidden">
-      <img class="img-responsive float-right" src="img/scary_proj.png" alt="">
+      <div class="hovereffect">
+        <img class="img-responsive" src="img/scary_proj.png" alt="">
+            <div class="overlay">
+                <h2>Middlesbrough Mystery Box</h2>
+        <p>
+          Stuff and things and stuff <a href="scary.html">LINK HERE</a>
+        </p>
+            </div>
+      </div>
     </div>
   </div>
 </div>
 
 
+<div class="container float-left">
+  <h1>Gallery</h1>
 
+  <div class="gallery-wrap">
+    <a class="item1 item-1" href="http://google.co.uk">
+      <div class="item1 item-1">
+        <h2>Middlesbrough Mystery Box</h2>
+      </div>
+    </a>
+
+   <a class="item item-2" href="http://google.co.uk">
+      <div class="item item-2">
+        <h2>What if anything is a Museum</h2>
+      </div>
+   </a>
+   <a class="item item-3" href="http://google.co.uk">
+      <div class="item item-3">
+       <h2>Benjamin Franklin House</h2>
+     </div>
+   </a>
+  </div>
+</div>
+
+
+<div>
+<gallerysection>
+  <div>      <div class="hovereffect">
+        <img class="img-responsive" src="img/scary_proj.png" alt="">
+            <div class="overlay">
+                <h2>Middlesbrough Mystery Box</h2>
+        <p>
+          Stuff and things and stuff <a href="scary.html">LINK HERE</a>
+        </p>
+            </div></div>
+  <div>2</div>
+  <div>3</div>
+</gallerysection>
+</div>
+
+
+<div class="container float-left">
+  <h1>Gallery</h1>
+
+  <div class="gallery-wrap">
+    <div class="item" style="flex: 0  0 200px"> 
+        <img class="img-responsive" src="img/scary_proj.png" alt="">
+    </div>
+
+
+    <div class="item">              
+      <img class="img-responsive" src="img/scary_proj.png" alt="">
+    </div>
+
+
+    <div class="item">
+        <img class="img-responsive" src="img/scary_proj.png" alt="">
+    </div>
+
+  </div>
+ </div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -100,8 +182,19 @@
     <!-- Custom scripts for this template -->
     <script src="js/resume.min.js"></script>
 
+    <script src="js/accordion.js"></script>
+
+<script
+        src="https://code.jquery.com/jquery-3.5.0.js"
+        integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+        crossorigin="anonymous"></script>
+
+
+
 
 
   </body>
+
+
 
 </html>
