--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
+       <!-- CSS for accordion-->
+    <link href="css/accordion.css" rel="stylesheet">    
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149925844-1"></script>
 	<script>
@@ -85,19 +88,40 @@
             <div class="subheading mb-5"><a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
           </div>
           <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p>
-          <div class="social-icons text-md-left">
+
             <h3>Current Projects:</h3>
-            <a href="scary.html">
+
+ <div class="container float-left" style="padding-left: 0px">
+  <div class="gallery-wrap">
+    <a class="item1 item-1" href="scary.html" alt="">
+      <div>
+        <h2>Middlesbrough Mystery Box</h2>
+      </div>
+    </a>
+
+   <a class="item item-2" href="MRart.html" alt="Writing Project. Defining the Museum. Image: A typewriter, with a sheet of handwritten text next to it on a desk. Photo by Dominika Roseclay from Pexels">
+      <div>
+        <h2>Defining the Museum</h2>
+      </div>
+   </a>
+   <a class="item item-3" href="bfh.html">
+      <div>
+       <h2>Benjamin Franklin House</h2>
+     </div>
+   </a>
+  </div>
+</div>
+         <!--   <a href="scary.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/scary.png" alt="">
             </a>
-            <!--<a href="#bfh.html">
+            <a href="#bfh.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/bfh.png" alt="">
-            </a> -->
+            </a>
             <a href="#signage.html">
               <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/articles.png" alt="">
             </a>
           </div>
-        </div>
+        </div> -->
       </section>
 
       <hr class="m-0">
