Change current to recent

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
           <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p>
 
-            <h3>Current Projects:</h3>
+            <h3>Recent Projects:</h3>
 
  <div class="container float-left" style="padding-left: 0px">
   <div class="gallery-wrap">
