accordion & @media fixes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           	<div class="h3"><span style="color:#6BD4D0">MUSEUMS</span> · <span style="color:#628fA1">HERITAGE</span> · <span style="color:#58456E">LIBRARIES</span> </div>
             <div class="subheading mb-5"><a href="mailto:jplibraryservices@gmail.com">jenni@jcpatonlearning.co.uk</a> · <a href="https://www.linkedin.com/in/jenniferclarepaton/"> linkedin.com/in/jenniferclarepaton</a>
           </div>
-          <p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p>
+          <div><p class="lead mb-5">I am an emerging museum professional with a background in the Library and Education sectors. I particularly specialise in developing and delivering education sessions and resources, with an interest in the role and usage of Digital in the museum.</p></div>
 
             <h3>Recent Projects:</h3>
 
@@ -508,9 +508,11 @@
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
         <div class="media">
-          <div class="media-body"><p>Occupy White Walls is a Museum MMO, or as it describes itself on its Steam page:</p>
+          <div class="media-body">
 
- <div class="quote"><br><q>a PC sandbox-building, AI-driven MMO where people play with Art, developed by folks who really love architecture and abstract characters.</q><br><br></div>
+            <div><p>Occupy White Walls is a Museum MMO, or as it describes itself on its Steam page:</p></div>
+
+ <div class="quote"><br>A PC sandbox-building, AI-driven MMO where people play with Art, developed by folks who really love architecture and abstract characters.<br><br></div>
 
 <p>OWW invites you to design and curate your own gallery from the ground up, unlocking architectural elements and buying paintings - suggested by their AI Daisy, who'll be taking note of the art that catches your interest - before opening your gallery to the public. You earn money from visitors and unlocks to keep developing your collection, and can take time to visit galleries created by others.</p>
 
@@ -529,7 +531,7 @@
 
 <br>This review is for the Early Access version of the game.</p>
             <br><br>
-          #Resource #Review #Art #Gallery #Participation #Learning
+          #Resource #Review #Art #Gallery #Participation #Learning </div>
           </div>
         </div>  
       </div>
