alt text fill in

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">JCPaton Learning</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/niff_logo_icon_192.png" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/niff_logo_icon_192.png" alt="Logo. J C Paton Learning is writen on a white background in a light purple. Museums, Heritage and Libraries is writen underneath in light green, dark green and dark purple respectively.">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +93,7 @@
 
  <div class="container float-left" style="padding-left: 0px">
   <div class="gallery-wrap">
-    <a class="item1 item-1" href="scary.html" alt="">
+    <a class="item1 item-1" href="scary.html" alt="Experimental Project. Middlesbrough Mystery Box. Image: A red plush hexagonal box with a cast metal lock plate and a matching wooden lid on a green centimeter marked cutting board, to the right is a brass key">
       <div>
         <h2>Middlesbrough Mystery Box</h2>
       </div>
@@ -104,7 +104,7 @@
         <h2>Defining the Museum</h2>
       </div>
    </a>
-   <a class="item item-3" href="bfh.html">
+   <a class="item item-3" href="bfh.html" alt="Digital Project. Benjamin Franklin House. Image: Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left.">
       <div>
        <h2>Benjamin Franklin House</h2>
      </div>
@@ -399,7 +399,7 @@
             <br><br>
           #CPD #Puzzle #FictionalisedHistory #Box #Collaboration
           </div>
-          <a href="scary.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/scary.png" alt=""></a>
+          <a href="scary.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/scary.png" alt="A digital rendering of a red hexagonal box, next to it is a macthing red lid with a green interior lining."></a>
         </div>  
       </div>
     </div>
@@ -420,7 +420,7 @@
         	<br><br>
          #Digital #Learning #BenjaminFranklinHouse #Accessibility #Games
      	</div>
-        <a href="bfh.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt=""></a>
+        <a href="bfh.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/Screenshot_BFH.png" alt="Still from a video game. A variety of bones sit on a shelf on a bright purple background, below are half wooden barrels labeled, Mammal, Human, and Bird, there is a timer in the top left."></a>
       </div>
  	 </div>
     </div>
@@ -460,7 +460,7 @@
         <br><br>
         #Digital #TateExchange #Learning #Programming #Events
       </div>
-     <a href="http://makeorbreaktate.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/makeorbreak.png" alt=""></a>
+     <a href="http://makeorbreaktate.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/makeorbreak.png" alt="'Make or' is written in red on a light pink textured background, below a large rectangle of blue, broken down the middle, has Break written on in red."></a>
     </div>
   </div>
 </div>
@@ -480,7 +480,7 @@
             <br><br>
           #EarlyModern #Budget #Digital #Audioguide #EnglishCivilWar
           </div>
-          <a href="roundheads.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/roundheads.png" alt=""></a>
+          <a href="roundheads.html"><img class="img-fluid rounded-circle mx-auto mb-2" src="img/roundheads.png" alt="A stylised line drwaing of a man in a 17th century buffcoat and large hat on an off white background."></a>
         </div>  
       </div>
     </div>
