accordion label fix

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
 <!--ACCORDIAN COLLAPSE PROJECTS-->
-<div id="accordion">
+<div class="accordion" id="accordion-proj">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h3 class="mb-0">
@@ -391,7 +391,7 @@
         </button>
       </h3>
     </div>
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-proj">
       <div class="card-body">
         <div class="media">
           <div class="media-body">Working with my friend the artist and travel blogger <a href="https://scarymushroom.wordpress.com/">ScaryMushroom</a>, the Mystery Box is a project to curate a journey around Middlesbrough's (and a few of London's) cultural and historic sites. But, its never that easy. The "Mystery Box" will take some exploring and a little de-coding before ScaryMushroom will know where to go, or be able to start picking apart the story behind her trips. 
@@ -412,7 +412,7 @@
         </button>
       </h5>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-proj">
       <div class="card-body">
  		<div class="media">
           <div class="media-body">Working with the Education Department and volunteers at Benjamin Franklin House, I undertook a project to re-develop and re-vamp the video games used in the team's learning offer. Following a successful funding bid the team had updated their learning offer to include a number of colourful collages by illustrator Kremena Dimitrova which afforded an excellent opportunity to re-examine the games used as part of their Discovery Room education session and bring them into line with the new design scheme as well as fixing some old problems and enhancing their accessibility. 
@@ -433,7 +433,7 @@
         </button>
       </h5>
     </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion-proj">
       <div class="card-body">
         Museum signage is a function of fairness and accessibility, as necessary in combating threshold fear and engaging new audiences as is programming, community engagement, or any other function of the museum.
 
@@ -451,7 +451,7 @@
         </button>
       </h5>
     </div>
-    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion-proj">
       <div class="card-body">
       	 <div class="media">
           <div class="media-body">
@@ -472,7 +472,7 @@
         </button>
       </h3>
     </div>
-    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion-proj">
       <div class="card-body">
         <div class="media">
           <div class="media-body">
@@ -496,7 +496,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <h2 class="mb-5">Blog</h2>
- <div id="accordion">
+ <div class="accordion" id="accordion-blog">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h3 class="mb-0">
@@ -505,7 +505,7 @@
         </button>
       </h3>
     </div>
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-blog">
       <div class="card-body">
         <div class="media">
           <div class="media-body">
